# allure3-docker-service

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml
.github/workflows/: docker-build.yml
src/: allure.rs  app.rs  main.rs  state.rs  storage.rs  unzip.rs  util.rs
src/handlers/: api.rs  ui.rs
src/ui_pages/: project.html  projects.html
