[package]
name = "allure3-docker-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.8", features = ["multipart"] }
tokio = { version = "1.36", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

anyhow = "1.0"

zip = "7.4.0"

tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "request-id"] }

dashmap = "6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http = "1.4.0"
